--- a/settings.gradle
+++ b/settings.gradle
@@ -3,11 +3,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 rootProject.name = "ShapeableOutlinedTextField"
 
-include()
 include(":shapeable-outlinedtextfield")
-include ':sample'
+include(":sample")
